[n] fixed scrollbar being shown

--- a/angular/src/app/components/ereader-config/ereader-config.component.scss
+++ b/angular/src/app/components/ereader-config/ereader-config.component.scss
@@ -55,6 +55,7 @@ button.failure {
 button {
     width: 6em;
     height: 2.5em;
+    margin-top: -10px;
 
     mat-spinner {
         position: absolute;
